	'configure.ac' and 'rivendell/Makefile.am'.
2015-11-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make rpm' target.
2015-11-18 Todd Baker <bakert@rfa.org>
	* Added environmental override capability for Hostname, User
	  and Password variables in all of example test harness programs
	  within tests directory.
2015-11-18 Todd Baker <bakert@rfa.org>
	* Added Environmental Variable Information into README file.
2015-11-20 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'Makefile.am' to make building of 'docbook/' conditional
	upon detection of the DocBook toolchain.
2015-11-20 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--disable-docbook' switch in 'configure'ac'.
2015-11-20 Fred Gleason <fredg@paravelsystems.com>
	* Fixed warnings in 'rivendell/listcart.c'.
	* Fixed warnings in 'rivendell/addcut.c'.
	* Fixed warnings in 'rivendell/editcart.c'.
	* Fixed warnings in 'rivendell/editcut.c'.
	* Fixed warnings in 'rivendell/import.c'.
2015-11-20 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'RD_ReadBool()' function in 'rivendell/rd_common.c'
	and 'rivendell/rd_common.h'.
	* Modified 'rivendell/addcart.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/addcut.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/editcart.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/editcut.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listcart.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listcarts.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listcut.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listcuts.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listgroup.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listgroups.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listlog.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listlogs.c' to use 'RD_ReadBool()'.
2015-11-20 Fred Gleason <fredg@paravelsystems.com>
	* Changed the names of the header and implementation files in
	'rivendell/' to match the names of the respective functions.