@@ -83,3 +83,6 @@
 2015-11-20 Fred Gleason <fredg@paravelsystems.com>
 	* Changed the names of the header and implementation files in
 	'rivendell/' to match the names of the respective functions.
+2016-11-02 Fred Gleason <fredg@paravelsystems.com>
+	* Corrected names of header files in 'rivwebcapi.spec.in'.
+	* Added an invocation to AR_GCC_TARGET() in 'configure.ac'.
